# dtcq

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build_dsp.sh  initialSetup.csh  initialSetup.sh
.github/workflows/: build.yml
config/: README  add_elinks.py  default.config  summarize_config.py  v5.config  v7.config  v8.config
elink_rate_study/: calculate_optical_link_bandwidth.py  cmdlog.sh  generate_table.py  plot_distribution.py  plot_perchip.py  plot_ratio_between_versions.py
generate_config/: detid_map.pkl  generate_config.py  log_generator.py
include/: Component.h  FIFO.h  Ports.h
interface/: ChipConfigReader.h  ChipDataPlayer.h  Circuit.h  DTCEventBuilder.h  EventBoundaryFinder.h  EventBoundaryFinderStreamAligned.h  FComponent.h
plot/: eva.py  plot.py
plot_buffer_size/: make_plot.py
src/: ChipConfigReader.cpp  ChipDataPlayer.cpp  Circuit.cpp  DTCEventBuilder.cpp  EventBoundaryFinder.cc  EventBoundaryFinder.cpp  EventBoundaryFinderStreamAligned.cc  EventBoundaryFinderStreamAligned.cpp  FComponent.cc  demo_evtboundary.cc  demo_fifo.cc  demo_fifo_verification.cc  demo_multiple_fifo.cc  dtc.cc  dtc11.cc
